<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_inicio"
    tools:context="com.adrianjaime.calmatumente.HomeActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/layoutButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center" >

                <ImageButton
                    android:id="@+id/btnInicio"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:src="@drawable/ic_menu_home"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_primary" />

                <ImageButton
                    android:id="@+id/btnMeditacion"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/btnInicio"
                    android:gravity="center"
                    android:src="@drawable/ic_menu_meditation"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/btn_primary" />

                <ImageButton
                    android:id="@+id/btnConfiguracion"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_below="@+id/btnMeditacion"
                    android:gravity="center"
                    android:src="@drawable/ic_menu_settings"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_primary" />

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLogo"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="90dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imgViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"/>

            <TextView
                android:id="@+id/tvDoctorName"
                android:text="@string/doctor_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textColor="@color/font_white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvAppName"
                android:text="calmatumente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/font_white"
                android:textSize="42sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutText"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1" >

            <VideoView
                android:id="@+id/vvInicio"
                android:layout_width="340dp"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnWebLink"
                android:text="@string/web_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_primary"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:textColor="@color/font_white"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMeditacion"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnMinutoMeditacion"
                android:text="@string/meditacion_1"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_secundary"
                android:gravity="center"
                android:textColor="@color/font_white"
                android:drawableLeft="@drawable/icono_blanco"
                android:drawableRight="@drawable/ic_med_play_2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <Button
                android:id="@+id/btnMeditacionMenteCuerpo"
                android:text="@string/meditacion_2"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_primary"
                android:layout_below="@+id/btnMinutoMeditacion"
                android:layout_marginTop="10dp"
                android:textColor="@color/font_white"
                android:drawableLeft="@drawable/icono_celeste"
                android:drawableRight="@drawable/ic_med_play_2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <Button
                android:id="@+id/btnMeditacionLiberaEstres"
                android:text="@string/meditacion_3"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_primary"
                android:layout_below="@+id/btnMeditacionMenteCuerpo"
                android:layout_marginTop="10dp"
                android:textColor="@color/font_white"
                android:drawableLeft="@drawable/icono_verde"
                android:drawableRight="@drawable/ic_med_play_2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <Button
                android:id="@+id/btnMeditacionInsomnio"
                android:text="@string/meditacion_4"
                android:layout_width="320dp"
                android:layout_height="70dp"
                android:background="@drawable/btn_primary"
                android:layout_below="@+id/btnMeditacionLiberaEstres"
                android:layout_marginTop="10dp"
                android:textColor="@color/font_white"
                android:drawableLeft="@drawable/icono_naranja"
                android:drawableRight="@drawable/ic_med_play_2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
